--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  display: flex;
+  justify-content: center;
 }
 
 .App-logo {
@@ -35,4 +37,14 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.ListBuilder {
+  display: flex;
+}
+
+.Input {
+  display: flex;
+  gap: 10px;
+  padding: 10px;
 }
